# Hhhhhhh

./: readme.md  智能车地图源文件.avif
doc/: README.md  ackermann_pure_pursuit_controller.md  astar_bspline_obstacle_avoidance_plan.md  custom_global_planner_plan.md  global_route_config_guide.md  mapping_guide.md  navigation_speed_tuning.md  navigation_usage.md  plan.md  pure_pursuit_algorithm_review.md  pure_pursuit_planner.cpp  usage.md  实车分层测试验证手册.md  小车实车部署操作手册.md  操作手册.md  纯激光定位技术审查.md
imu_calib/: CMakeLists.txt  LICENSE  README.md  imu_calibration.yaml  package.xml
imu_calib/include/imu_calib/: accel_calib.h  apply_calib.h  do_calib.h
imu_calib/src/: apply_calib.cpp  apply_calib_node.cpp  do_calib.cpp  do_calib_node.cpp
imu_calib/src/accel_calib/: accel_calib.cpp
lslidar_driver/launch/: lsm10_uart_launch.py
lslidar_driver/params/lidar_net_ros2/: lsn10_net.yaml
lslidar_driver/params/lidar_uart_ros2/: lsm10.yaml  lsn10.yaml
lslidar_driver/src/: lslidar_driver.cc
maps/: README.md  sim_5m_map.pgm  sim_5m_map.yaml
maps/real/: global_routes.yaml  map.pgm  map.yaml
maps/real copy/: global_routes.yaml  map.pgm  map.yaml
maps/sim/: global_routes.yaml  map.yaml
origincar_base/: CMakeLists.txt
origincar_base/config/: ekf.yaml
origincar_base/include/origincar_base/: origincar_base.h
origincar_base/launch/: base_serial.launch.py  origincar_bringup.launch.py
origincar_base/src/: origincar_base.cpp
origincar_bringup/: CMakeLists.txt  package.xml
origincar_bringup/launch/: real_mapping.launch.py  real_navigation.launch.py  real_robot.launch.py  real_save_map.launch.py  real_view_navigation.launch.py  sim.launch.py  sim_mapping.launch.py  sim_navigation.launch.py  sim_view_navigation.launch.py
origincar_description/: CMakeLists.txt.save  package.xml
origincar_description/config/: joint_names_origincar_description.yaml
origincar_description/launch/: display.launch  gazebo.launch  gazebo.launch.py
origincar_mapping/: CMakeLists.txt
origincar_mapping/config/: laser_predictive_localizer.yaml  slam_toolbox.yaml
origincar_mapping/doc/: laser_localizer.md
origincar_mapping/launch/: localization.launch.py  map_server.launch.py
origincar_navigation/: CMakeLists.txt  package.xml
origincar_navigation/behavior_trees/: navigate_through_poses_placeholder.xml  navigate_to_pose_fixed_route_once.xml
origincar_navigation/config/: local_keepout_mask copy.pgm  local_keepout_mask.yaml  nav2_params.yaml  rviz_nav.rviz
origincar_navigation/doc/: local_avoidance_controller_usage.md  segment_bypass_avoidance.md  路径片段替换式局部避障说明.md  阿克曼控制器与局部避障使用说明.md
origincar_navigation/include/origincar_navigation/: goal_reached_utils.hpp  noop_progress_checker.hpp  origincar_ackermann_pure_pursuit_controller.hpp  origincar_global_planner.hpp  origincar_goal_checker.hpp  tracking_route_provider.hpp
origincar_navigation/include/origincar_navigation/local_avoidance/: segment_bypass_planner.hpp
origincar_navigation/launch/: navigation.launch.py  route_markers.launch.py  view_navigation.launch.py
origincar_navigation/maps/: README.md  local_keepout_mask.pgm
origincar_navigation/plugins/: origincar_nav_plugins.xml
origincar_navigation/scripts/: route_point_formatter.py
origincar_navigation/src/: noop_progress_checker.cpp  origincar_ackermann_controller.cpp  origincar_ackermann_pure_pursuit_controller.cpp  origincar_global_planner.cpp  origincar_goal_checker.cpp  route_markers_publisher.cpp
origincar_navigation_test_tools/: CMakeLists.txt  package.xml
origincar_navigation_test_tools/doc/: local_avoidance_manual_test.md
origincar_navigation_test_tools/launch/: local_avoidance_manual_test.launch.py  offline_local_avoidance_test.launch.py
origincar_navigation_test_tools/rviz/: offline_local_avoidance_test.rviz
origincar_navigation_test_tools/src/: local_avoidance_manual_test_node.cpp
origincar_sim/: CMakeLists.txt  package.xml
origincar_sim/config/: sim_params.yaml
origincar_sim/launch/: move_cone.launch.py  robot_state.launch.py  sim_world.launch.py  spawn_cone.launch.py  texture_marker.launch.py  view_model.launch.py  view_robot.launch.py
origincar_sim/models/5m_map_arena/: model.config  model.sdf
origincar_sim/models/5m_map_arena/materials/scripts/: smart_car_map.material
origincar_sim/models/traffic_cone/: model.config  model.sdf
origincar_sim/models/traffic_cone/meshes/: cone_body.stl
origincar_sim/rviz/: my.rviz  origincar_model.rviz
origincar_sim/scripts/: move_cone.py  texture_marker_publisher.py
origincar_sim/src/: ackermann_kinematic_plugin.cpp
origincar_sim/urdf/: origincar_ackermann.urdf.xacro
origincar_sim/worlds/: 5m_map_world.world
origincar_strategy/: CMakeLists.txt  package.xml
origincar_strategy/config/: strategy_params.yaml
origincar_strategy/launch/: route_strategy.launch.py
origincar_strategy/src/: route_strategy_controller.cpp
qr_and_voice_broadcast/: CMakeLists.txt  package.xml
qr_and_voice_broadcast/launch/: voice_qr_caption.launch.py
qr_and_voice_broadcast/scripts/: image_to_string.py  speak_result.py  yuying.py
qr_and_voice_broadcast/src/: qr_decoder.cpp
