<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <!-- 包名：和 CMakeLists.txt 中的 project(origincar_navigation) 必须一致。 -->
  <name>origincar_navigation</name>
  <!-- 包版本。 -->
  <version>0.1.0</version>
  <!-- 包说明：当前主要提供 Nav2 配置，后续可加入自定义规划/控制插件。 -->
  <description>Navigation configuration and future Nav2 plugins for Origincar.</description>
  <!-- 维护者和许可证是 ROS 包描述文件的必填信息。 -->
  <maintainer email="xjl@example.com">xjl</maintainer>
  <license>Apache-2.0</license>

  <!-- 构建工具依赖。 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 以下 depend 是为未来自定义 Nav2 插件预留的编译/运行依赖。 -->
  <depend>ament_index_cpp</depend>
  <depend>angles</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_core</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_navfn_planner</depend>
  <depend>nav2_util</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>
  <depend>yaml-cpp</depend>

  <exec_depend>nav2_common</exec_depend>
  <!-- 以下 Nav2 运行依赖对应 nav2_params.yaml 中实际启用的最小服务器集合和插件。 -->
  <exec_depend>nav2_bt_navigator</exec_depend>
  <exec_depend>nav2_controller</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>nav2_planner</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <!-- 声明构建类型。 -->
    <build_type>ament_cmake</build_type>
  </export>
</package>
