<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>origincar_strategy</name>
  <version>0.1.0</version>
  <description>Route-level strategy controller for Origincar task navigation.</description>
  <maintainer email="xjl@example.com">xjl</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_index_cpp</depend>
  <depend>angles</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>yaml-cpp</depend>

  <exec_depend>nav2_common</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
