<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qr_and_voice_broadcast</name>
  <version>0.0.1</version>
  <description>QR code decoding, voice broadcast, and image captioning for Origincar</description>
  <maintainer email="digua@example.com">digua</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>ai_msgs</depend>
  <depend>origincar_msg</depend>
  <depend>tf2_ros</depend>

  <exec_depend>python3-serial</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-openai</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
